# p3at_optimizer

./: .gitignore  README.md
.github/: copilot-instructions.md
src/p3at_control/: .gitignore  README.txt  package.xml  setup.cfg  setup.py
src/p3at_control/config/: params.yaml
src/p3at_control/controllers/p3at_webots_controller/: Makefile  p3at_webots_controller.py
src/p3at_control/launch/: p3at.launch.py
src/p3at_control/optimizer/: cap_llm_report.py  compare_validation.py  current_parser_map.example.json  llm_parsing_benchmark.py  llm_parsing_dataset_v1_120.json  moead_ireced_optimizer.py  moead_paper_report.py  nsga2_optimizer.py  p3at_validator.py  pygad_optimizer.py  real_robot_validation.py  run_optimizer_squad.py  scenario_runner.py  tail_ablation_report.py
src/p3at_control/p3at_control/: cap_parser.py  p3at_api.py  p3at_bus_udp.py  p3at_executor.py
src/p3at_control/protos/: Pioneer3at.proto
src/p3at_control/worlds/: pioneer3at.wbt  pioneer3at_env.wbt
src/simple_p3at_driver/: CMakeLists.txt  package.xml
src/simple_p3at_driver/src/: simple_p3at.cpp
