<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>p3at_control</name>
  <version>0.0.1</version>
  <description>P3AT Control Stack (SIM + REAL)</description>

  <maintainer email="iartes@todo.todo">iartes</maintainer>
  <license>MIT</license>
  
  <!-- Core ROS -->
  <depend>rclpy</depend>
  <depend>rcl_interfaces</depend>
  
  <!-- Python runtime deps used by nodes/scripts -->
  <exec_depend>python3-flask</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  
  <!-- Messages -->
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- Runtime -->
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

